@@ -1,3 +1,6 @@
+2011-04-14 yusei
+* Remove old unnecessary tales expression from relation string fields.
+
 2011-04-04 yusei
 * Fix tales expression on property "enabled" of my_view_mode_payment_date. This field cannot be displayed.
 
